--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta property="og:image" content="https://ice-warrior.netlify.app/screenshot.jpg">
+  <meta property="og:url" content="https://ice-warrior.netlify.app">
+  <meta property="og:title" content="Creative game using Phaser 3">
   <title>Endless Run</title>
 </head>
 
